fix(themes): changes html to only use text-readable-content instead of text-background or text-slate

--- a/app/assets/tailwind/themes/kernel-mindset/application.css
+++ b/app/assets/tailwind/themes/kernel-mindset/application.css
@@ -17,7 +17,7 @@
   }
 
   body {
-    @apply text-background-200;
+    @apply text-readable-content-500;
     background-color: #111;
   }
 
